results/SVCOMP/houdini/log-StringBuilderCapLen02-2024_03_19_03_58_21.txt
public class StringBuilderCapLen02 {
  //@ non_null
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures arg == null ==> \result;
  //@ ensures arg == null ==> !\result;
  //@ ensures arg != null ==> \result;
  //@ ensures arg != null ==> !\result;
  public static boolean f(String arg){
    StringBuilder buffer = new StringBuilder(arg);
    return buffer.toString().equals("Diffblue  is leader in automatic test case generation");
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("");
    f("123");
    f("&fgaes%");
    f("<bad/>");
    f("Diffblue  is leader in automatic test case generation");
    f("Diffblue  is leader in automatic test case generat10n");
  }
}


/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen02.java:2: error: No modifiers are allowed prior to a lightweight specification case
  //@ non_null
      ^
1 error

public class StringBuilderCapLen02 {
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures arg == null ==> \result;
  //@ ensures arg == null ==> !\result;
  //@ ensures arg != null ==> \result;
  //@ ensures arg != null ==> !\result;
  public static boolean f(String arg){
    StringBuilder buffer = new StringBuilder(arg);
    return buffer.toString().equals("Diffblue  is leader in automatic test case generation");
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("");
    f("123");
    f("&fgaes%");
    f("<bad/>");
    f("Diffblue  is leader in automatic test case generation");
    f("Diffblue  is leader in automatic test case generat10n");
  }
}


OpenJML not responding. Aborted.
